--- a/home.css
+++ b/home.css
@@ -50,3 +50,44 @@ html {
     margin: 10px;
     color: white;
 }
+
+.content{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 150px;
+}
+
+.flags{
+    background-color: rgb(201, 201, 201);
+    width: 20%;
+    display: flex;
+    border-radius: 5px;
+}
+
+.flags img{
+    padding: 20px;
+}
+
+.flags p{
+    align-self: center;
+    font-size: large;
+    color: black;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    background-color: #042940;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+.footer p{
+    color: white;
+}
+
