--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,81 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 html {
-    box-sizing: border-box;
-    font-size: 16px;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-  }
-  
-  ol, ul {
-    list-style: none;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  body{
-    font-family: Poppins;
-        background-color: #eeeeee;
-  }
-
-.navBar{
-    display: flex;
-    justify-content: space-between;
-    background-color: #042940;
-    height: 20vh;
-    align-items: center;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
-.navImage{
-    margin-left: 30px;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-.navPages{
-    margin-right: 20px;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
-.navPages a{
-    text-decoration: none;
-    font-size: 30px;
-    margin: 10px;
-    color: white;
+ol,
+ul {
+  list-style: none;
 }
 
-form{
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  font-family: Poppins;
+  background-color: #eeeeee;
+}
+
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #042940;
+  height: 20vh;
+  align-items: center;
+}
+
+.navImage {
+  margin-left: 30px;
+}
+
+.navPages {
+  margin-right: 20px;
+}
+
+.navPages a {
+  text-decoration: none;
+  font-size: 30px;
+  margin: 10px;
+  color: white;
+}
+
+form {
   border-radius: 1em;
-    background-color: white;
-    margin: 5vh auto; 
-    display: flex;
-    flex-direction: column;
-    height: 44vh;
-    width: 30vw;
+  background-color: white;
+  margin: 5vh auto;
+  display: flex;
+  flex-direction: column;
+  height: 44vh;
+  width: 30vw;
 }
 
-label{
-    width:25vw;
-    margin-top:1vh;
-    margin-left: 2.5vw;
+label {
+  width: 25vw;
+  margin-top: 1vh;
+  margin-left: 2.5vw;
 }
 
-input{
-    width:25vw;
-    margin:0 auto
+input {
+  width: 25vw;
+  margin: 0 auto
 }
 
-button{
-    height: 4vh;
-    width:80px;
-    margin-top:2vh;
-    margin-left: 2.5vw;
+button {  
+  border-radius: 0.7em;
+  background-color: #042940;
+  color: #eeeeee;
+  height: 4vh;
+  width: 80px;
+  margin:2vh auto 0 auto
 }
