--- a/styles/argentina.css
+++ b/styles/argentina.css
@@ -35,7 +35,7 @@ html {
 .navBar{
     display: flex;
     justify-content: space-between;
-    background-color: #042940;
+    background-color: #75a9db;
     height: 20vh;
     align-items: center;
 }
@@ -170,10 +170,32 @@ html {
 
 /* Players Page */
 
-.backButton {
+.players {
+    /* display:flex;
+    flex-direction: column; */
+    margin:2vh auto 0 auto;
+    height:120vh;
+    width: 90vw;
+}
+
+.position {
+    height: 30vh;
+    width: 90vw;
+}
+
+.backButtonSection{
+    height: 5vh;
+    width: 90vw;
+    margin: 2vh auto;
+    display: flex;
+}
+
+.backButton{
+    display: grid;
+    place-content: center;
     color: white;
     border-radius: 1.5em;
     height: 5vh;
-    width: 40vw;
-    background-color: #042940;
+    width: 10vw;
+    background-color: #75a9db;
 }
