--- a/styles/playersBrasil.css
+++ b/styles/playersBrasil.css
@@ -105,28 +105,54 @@ html {
     text-align: center;
     margin-top: 30px;
     margin-bottom: 10px;
+    position: relative;
 }
 
 .playersCards{
-    display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 10px;
     gap: 15px;
+    white-space: nowrap;
+    overflow-x: hidden;
 }
 
 .player{
+    display: inline-flex;
     background-color: white;
-    width: 15vw;
+    width: 17vw;
     padding: 10px;
-    display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid rgba(117, 117, 117, 0.445);
     border-radius: 10px;
+    margin-left: 5px;
 }
 
 .player img{
     width: 10vw;
     height: 25vh;
     border-radius: 5px;
+}
+
+.arrow{
+    width: 5vw;
+    height: 10vh;
+    position: absolute;
+    opacity: 0;
+    top: 50%;
+}
+
+.arrow:hover{
+    opacity: 1;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.arrowLeft{
+    left: 50px;
+}
+
+.arrowRight{
+    right: 50px;
 }
