--- a/styles/playersBrasil.css
+++ b/styles/playersBrasil.css
@@ -189,4 +189,17 @@ html {
     .mobileMenu .open {
       display:block;
     }
+
+    .player{
+      width: 35vw;
+    }
+
+    .player img{
+      width: 25vw;
+    }
+
+    .arrow{
+      width: 10vw;
+      height: 10vh;
+    }
 }
