--- a/styles/playersBrasil.css
+++ b/styles/playersBrasil.css
@@ -202,4 +202,9 @@ html {
       width: 10vw;
       height: 10vh;
     }
+
+    .countryMenu{
+      flex-direction: column;
+      align-items: center;
+    }
 }
