--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -46,7 +46,12 @@ body {
 }
 
 .mobileMenu {
+  margin-right: 30px;
   display:none
+}
+
+#menuButton {
+  background-color: #042940
 }
 
 .navBar {
